--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "Continuacion de mi primer servidor",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node ./"
