--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node ./"
+    "start": "node ./",
+    "dev": "nodemon ./"
+
   },
   "repository": {
     "type": "git",
@@ -16,5 +18,8 @@
     "js"
   ],
   "author": "Diana Arroyo",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  }
 }
